# python-docker

./: docker-compose.yml
app/: .gitignore  README.md  pyproject.toml
app/.devcontainer/: devcontainer.json
app/myproject/src/: my_module.py
app/myproject/tests/: my_module_test.py
docker/app/: Dockerfile
